--- a/DesktopApp/TNM/Pages/TaskEdit.xaml
+++ b/DesktopApp/TNM/Pages/TaskEdit.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="Auto" />
             <!-- Кнопка редактирования -->
         </Grid.RowDefinitions>
-
+        <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
         <!-- Название задачи и статус -->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,20">
             <ui:TextBlock
@@ -89,7 +89,7 @@
         Click="EditTaskButton_Click" />
         <ui:Flyout x:Name="UserSelectionFlyout" Placement="Mouse" Width="300">
             <StackPanel>
-                <TextBlock Text="Выберите пользователя:" Margin="10" />
+                <TextBlock Text="Выберите пользователя:" Margin="10" Foreground="{DynamicResource TextPrimaryBrush}" />
                 <ComboBox x:Name="UserSelectionComboBox" Width="250" Margin="10" />
                 <Button Content="Добавить" Width="100" Margin="10" HorizontalAlignment="Center" Click="ConfirmUserSelection_Click" />
             </StackPanel>
