--- a/DesktopApp/TNM/Auth/Registration.xaml
+++ b/DesktopApp/TNM/Auth/Registration.xaml
@@ -14,6 +14,7 @@
     <Grid Name="MainGrid">
         <!-- Панель заголовка с кнопками управления окнами (не масштабируется) -->
         <ui:TitleBar />
+        <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
         <Viewbox Grid.Row="1" Stretch="Uniform">
             <!-- Содержимое окна, которое масштабируется по мере изменения размеров окна -->
             <Grid Grid.Row="1">
