--- a/DesktopApp/TNM/Pages/ProjectView.xaml
+++ b/DesktopApp/TNM/Pages/ProjectView.xaml
@@ -11,6 +11,7 @@
     <ui:DynamicScrollViewer VerticalScrollBarVisibility="Auto" CanContentScroll="True"
         HorizontalScrollBarVisibility="Disabled">
         <StackPanel Orientation="Vertical" Margin="10">
+            <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
             <!-- Список проектов -->
             <ItemsControl Name="ProjectList" ItemsSource="{Binding Projects}">
                 <ItemsControl.ItemsPanel>
