--- a/DesktopApp/TNM/Pages/Settings.xaml
+++ b/DesktopApp/TNM/Pages/Settings.xaml
@@ -8,6 +8,7 @@
     d:DesignHeight="450" d:DesignWidth="800"
     Title="Settings">
     <Grid>
+        <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
         <StackPanel Margin="0,0,0,24">
             <ui:CardControl VerticalAlignment="Top" Margin="0,0,0,0" Icon="{ui:SymbolIcon Color24}">
                 <ui:CardControl.Header>
