--- a/DesktopApp/TNM/Pages/Settings.xaml
+++ b/DesktopApp/TNM/Pages/Settings.xaml
@@ -8,7 +8,7 @@
     d:DesignHeight="450" d:DesignWidth="800"
     Title="Settings">
     <Grid>
-        <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
+        <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Bottom" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
         <StackPanel Margin="0,0,0,24">
             <ui:CardControl VerticalAlignment="Top" Margin="0,0,0,0" Icon="{ui:SymbolIcon Color24}">
                 <ui:CardControl.Header>
@@ -32,8 +32,9 @@
                 SelectionChanged="ThemeComboBox_SelectionChanged"
                 Grid.Column="1"
                 MinWidth="200">
-                    <ComboBoxItem Content="Светлая" Tag="Light" />
                     <ComboBoxItem Content="Тёмная" Tag="Dark" />
+                    <ComboBoxItem Content="Светлая" Tag="Light" />
+                    <ComboBoxItem Content="Высокий контраст" Tag="HighContrast" />
                 </ComboBox>
             </ui:CardControl>
             <!--TEST-->
