--- a/DesktopApp/TNM/Menu/MainMenu.xaml
+++ b/DesktopApp/TNM/Menu/MainMenu.xaml
@@ -24,9 +24,7 @@
         <ui:NavigationView x:Name="NavigationMenu" Grid.Row="1" IsPaneOpen="False" IsBackButtonVisible="Collapsed">
             <ui:NavigationView.MenuItems>
                 <ui:NavigationViewItem x:Name="ProjectListDashboardButton" Content="Проекты" Icon="{ui:SymbolIcon Home24}" TargetPageType="{x:Type pages:ProjectView}" />
-                <ui:NavigationViewItem x:Name="CreateProjectDashboardButton" Content="Создать проект" Icon="{ui:SymbolIcon Add24}" TargetPageType="{x:Type pages:CreateProject}" Cursor="Hand" />
-                <ui:NavigationViewItem x:Name="EditProjectDashboardButton" Content="Редактировать проект (TEST)" Icon="{ui:SymbolIcon Question24}" TargetPageType="{x:Type pages:EditProject}" Cursor="Hand" />
-                <ui:NavigationViewItem x:Name="TaskViewDashboardButton" Content="Просмотреть задачу (TEST)" Icon="{ui:SymbolIcon Question24}" TargetPageType="{x:Type pages:TaskEdit}" Cursor="Hand" />
+                <ui:NavigationViewItem x:Name="CreateProjectDashboardButton" Content="Создать проект (WIP, НЕ ЗАБЫТЬ УБРАТЬ)" Icon="{ui:SymbolIcon Add24}" TargetPageType="{x:Type pages:CreateProject}" Cursor="Hand" />
             </ui:NavigationView.MenuItems>
             <ui:NavigationView.FooterMenuItems>
                 <ui:NavigationViewItem x:Name="SettingsDashboardButton" Content="Настройки" Icon="{ui:SymbolIcon Settings24}" TargetPageType="{x:Type pages:Settings}" />
