--- a/DesktopApp/TNM/Pages/ProjectPage.xaml
+++ b/DesktopApp/TNM/Pages/ProjectPage.xaml
@@ -1,74 +1,85 @@
 ﻿<Page x:Class="TNM.Pages.ProjectPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
     Title="ProjectPage">
-    <ui:DynamicScrollViewer VerticalScrollBarVisibility="Auto"
-    HorizontalScrollBarVisibility="Disabled">
-        <StackPanel Orientation="Vertical" Margin="10">
-            <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
-            <!-- Список проектов -->
-            <ItemsControl Name="TaskList" ItemsSource="{Binding _Tasks}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <VirtualizingStackPanel />
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <ui:CardAction
-                        x:Name="CardAction"
-                        Margin="8"
-                        Padding="8"
-                        Command="{Binding EditCommand}"
-                        CommandParameter="{Binding}"
-                        Click="CardAction_Click"
-                        IsChevronVisible="False">
-                            <Grid x:Name="CardGrid">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                <ui:Image
-                                x:Name="TaskIcon"
-                                Width="60"
-                                Margin="24,0,0,0"
-                                Source="{Binding IconPath}" />
-                                <StackPanel
-                                x:Name="TextContainer"
-                                Grid.Column="1"
-                                Margin="24"
-                                VerticalAlignment="Center">
-                                    <ui:TextBlock
-                                    x:Name="TaskTitle"
-                                    FontTypography="BodyStrong"
-                                    Text="{Binding title}"
-                                    TextWrapping="WrapWithOverflow" />
-                                    <ui:TextBlock
-                                    x:Name="TaskDescription"
-                                    Appearance="Secondary"
-                                    Text="{Binding description}"
-                                    TextWrapping="WrapWithOverflow" />
-                                </StackPanel>
-                            </Grid>
-                        </ui:CardAction>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
+    <Grid>
+        <ui:DynamicScrollViewer VerticalScrollBarVisibility="Auto"
+                                HorizontalScrollBarVisibility="Disabled">
+            <StackPanel Orientation="Vertical" Margin="10">
+                <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
 
-            <!-- Кнопка создания новой задачи -->
-            <ui:Button Content="Создать новую задачу"
-            x:Name="CreateTaskButton"
-            Margin="8"
-            Height="50"
-            FontSize="16"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Bottom"
-            Click="CreateNewTask_Click" />
-        </StackPanel>
-    </ui:DynamicScrollViewer>
+                <!-- Информация о проекте -->
+                <Border BorderThickness="1" BorderBrush="Gray" Padding="10" Margin="10,0,10,0">
+                    <StackPanel>
+                        <ui:TextBlock FontTypography="BodyStrong" FontSize="18" Text="{Binding SelectedProject.projectname}" Foreground="{DynamicResource TextPrimaryBrush}" />
+                        <ui:TextBlock Appearance="Secondary" Text="{Binding SelectedProject.description}" TextWrapping="Wrap" Foreground="{DynamicResource TextPrimaryBrush}" />
+                    </StackPanel>
+                </Border>
+
+                <!-- Кнопка создания новой задачи -->
+                <ui:Button Content="Создать новую задачу"
+                           x:Name="CreateTaskButton"
+                           Margin="8"
+                           Height="50"
+                           FontSize="16"
+                           HorizontalAlignment="Stretch"
+                           VerticalAlignment="Bottom"
+                           Click="CreateNewTask_Click" />
+
+                <!-- Список задач -->
+                <ItemsControl Name="TaskList" ItemsSource="{Binding _Tasks}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <VirtualizingStackPanel />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <ui:CardAction
+                                x:Name="CardAction"
+                                Margin="8"
+                                Padding="8"
+                                Command="{Binding EditCommand}"
+                                CommandParameter="{Binding}"
+                                Click="CardAction_Click"
+                                IsChevronVisible="False">
+                                <Grid x:Name="CardGrid">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <ui:Image
+                                        x:Name="TaskIcon"
+                                        Width="60"
+                                        Margin="24,0,0,0"
+                                        Source="{Binding IconPath}" />
+                                    <StackPanel
+                                        x:Name="TextContainer"
+                                        Grid.Column="1"
+                                        Margin="24"
+                                        VerticalAlignment="Center">
+                                        <ui:TextBlock
+                                            x:Name="TaskTitle"
+                                            FontTypography="BodyStrong"
+                                            Text="{Binding title}"
+                                            TextWrapping="WrapWithOverflow" />
+                                        <ui:TextBlock
+                                            x:Name="TaskDescription"
+                                            Appearance="Secondary"
+                                            Text="{Binding description}"
+                                            TextWrapping="WrapWithOverflow" />
+                                    </StackPanel>
+                                </Grid>
+                            </ui:CardAction>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </StackPanel>
+        </ui:DynamicScrollViewer>
+    </Grid>
 </Page>
