--- a/DesktopApp/TNM/Pages/ProjectPage.xaml
+++ b/DesktopApp/TNM/Pages/ProjectPage.xaml
@@ -8,16 +8,34 @@
     d:DesignHeight="450" d:DesignWidth="800"
     Title="ProjectPage">
     <Grid>
-        <ui:DynamicScrollViewer VerticalScrollBarVisibility="Auto"
-                                HorizontalScrollBarVisibility="Disabled">
+        <ui:DynamicScrollViewer
+        VerticalScrollBarVisibility="Auto"
+        HorizontalScrollBarVisibility="Disabled">
             <StackPanel Orientation="Vertical" Margin="10">
-                <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
-
+                <ui:SnackbarPresenter
+                x:Name="SnackbarPresenter"
+                VerticalAlignment="Top"
+                HorizontalAlignment="Center"
+                Panel.ZIndex="1"
+                Margin="0,10,0,0" />
                 <!-- Информация о проекте -->
-                <Border BorderThickness="1" BorderBrush="Gray" Padding="10" Margin="10,0,10,0">
+                <Border
+                BorderThickness="1"
+                BorderBrush="Gray"
+                Padding="10"
+                Margin="10,0,10,0"
+                Background="{DynamicResource BackgroundImageBrush}">
                     <StackPanel>
-                        <ui:TextBlock FontTypography="BodyStrong" FontSize="18" Text="{Binding SelectedProject.projectname}" Foreground="{DynamicResource TextPrimaryBrush}" />
-                        <ui:TextBlock Appearance="Secondary" Text="{Binding SelectedProject.description}" TextWrapping="Wrap" Foreground="{DynamicResource TextPrimaryBrush}" />
+                        <ui:TextBlock
+                        FontTypography="BodyStrong"
+                        FontSize="18"
+                        Text="{Binding SelectedProject.projectname}"
+                        Foreground="{DynamicResource TextPrimaryBrush}" />
+                        <ui:TextBlock
+                        Appearance="Secondary"
+                        Text="{Binding SelectedProject.description}"
+                        TextWrapping="Wrap"
+                        Foreground="{DynamicResource TextPrimaryBrush}" />
                     </StackPanel>
                 </Border>
 
