➕ Added a lot of design stuff

--- a/DesktopApp/TNM/Pages/ProjectPage.xaml
+++ b/DesktopApp/TNM/Pages/ProjectPage.xaml
@@ -29,6 +29,7 @@
                         <ui:TextBlock
                         FontTypography="BodyStrong"
                         FontSize="18"
+                        FontWeight="Bold"
                         Text="{Binding SelectedProject.Projectname}"
                         Foreground="{DynamicResource TextPrimaryBrush}" />
                         <ui:TextBlock
