--- a/DesktopApp/TNM/Pages/TaskView.xaml
+++ b/DesktopApp/TNM/Pages/TaskView.xaml
@@ -1,12 +1,13 @@
-﻿<Page x:Class="TNM.Pages.TaskEdit"
+﻿<Page x:Class="TNM.Pages.TaskView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TNM.Pages"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
-    Title="TaskEdit">
+    Title="TaskView">
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -16,9 +17,6 @@
             <RowDefinition Height="Auto" />
             <!-- Категории -->
             <RowDefinition Height="*" />
-            <!-- Отвечающие за задачу -->
-            <RowDefinition Height="Auto" />
-            <!-- Кнопка редактирования -->
         </Grid.RowDefinitions>
         <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
         <!-- Название задачи и статус -->
@@ -29,19 +27,28 @@
             FontWeight="Bold"
             VerticalAlignment="Center"
             Foreground="{DynamicResource TextPrimaryBrush}" />
-
             <ComboBox
             x:Name="StatusComboBox"
             SelectionChanged="StatusComboBox_SelectionChanged"
             Margin="20,0,0,0"
             Width="150"
-            FontSize="16">
+            FontSize="16"
+            IsEditable="False">
                 <ComboBoxItem Content="В процессе" />
                 <ComboBoxItem Content="Выполнено" />
                 <ComboBoxItem Content="Отменено" />
             </ComboBox>
         </StackPanel>
-
+        <Button
+        x:Name="EditTaskButton"
+        Content="Редактировать задачу"
+        Grid.Row="0"
+        HorizontalAlignment="Right"
+        VerticalAlignment="Center"
+        Height="40"
+        Margin="0,-20,10,0"
+        FontSize="16"
+        Click="EditTaskButton_Click" />
         <!-- Описание задачи -->
         <ui:TextBlock
         x:Name="TaskDescriptionTextBlock"
@@ -61,37 +68,24 @@
             Margin="0,0,0,10"
             Foreground="{DynamicResource TextPrimaryBrush}" />
             <WrapPanel x:Name="TagsWrapPanel" />
-            <Button Content="+" Width="35" Height="35" Click="AddTag_Click" Margin="0,5,0,0" />
-        </StackPanel>
-
-        <!-- Отвечающие за задачу -->
-        <StackPanel Grid.Row="3" Orientation="Vertical">
-            <ui:TextBlock
-            Text="Отвечает за задачу:"
-            FontSize="18"
-            FontWeight="Bold"
-            Margin="0,0,0,10"
-            Foreground="{DynamicResource TextPrimaryBrush}" />
-            <WrapPanel x:Name="AssignedWrapPanel" />
-            <Button Content="+" Width="35" Height="35" Click="AddAssigned_Click" Margin="0,5,0,0" />
         </StackPanel>
 
         <!-- Кнопка редактировать -->
         <Button
-        x:Name="EditTaskButton"
-        Content="Редактировать"
+        x:Name="SubmitTaskButton"
+        Content="Выполнить задачу"
         Grid.Row="4"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Bottom"
         Height="50"
         Margin="0,20,0,0"
         FontSize="16"
-        Click="EditTaskButton_Click" />
+        Click="SubmitTaskButton_Click" />
         <ui:Flyout x:Name="UserSelectionFlyout" Placement="Mouse" Width="300">
             <StackPanel>
                 <TextBlock Text="Выберите пользователя:" Margin="10" Foreground="{DynamicResource TextPrimaryBrush}" />
                 <ui:ListView x:Name="UserSelectionListView" Margin="10" MaxHeight="200" SelectionMode="Single" />
-                <Button Content="Добавить" Width="100" Margin="10" HorizontalAlignment="Center" Click="ConfirmUserSelection_Click" />
+                <Button Content="Добавить" Width="100" Margin="10" HorizontalAlignment="Center" />
             </StackPanel>
         </ui:Flyout>
     </Grid>
