--- a/DesktopApp/TNM/Pages/CreateProject.xaml
+++ b/DesktopApp/TNM/Pages/CreateProject.xaml
@@ -12,14 +12,21 @@
         <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
         <!-- Верхний заголовок -->
         <ui:TextBlock
-            x:Name="Title"
-            Text="Создать новый проект"
-            FontSize="28"
-            FontWeight="Bold"
-            Margin="20,20,0,0"
-            HorizontalAlignment="Left"
-            Foreground="{DynamicResource TextPrimaryBrush}" />
-
+        x:Name="Title"
+        Text="Создать новый проект"
+        FontSize="28"
+        FontWeight="Bold"
+        Margin="20,20,0,0"
+        HorizontalAlignment="Left"
+        Foreground="{DynamicResource TextPrimaryBrush}" />
+        <Button
+        Content="↩"
+        Height="40"
+        Click="BackButton_Click"
+        VerticalAlignment="Top"
+        Width="50"
+        HorizontalAlignment="Right"
+        Margin="0,20,20,0" />
         <!-- Основная форма -->
         <Grid Margin="20,80,20,20">
             <Grid.RowDefinitions>
