--- a/DesktopApp/TNM/Pages/CreateTask.xaml
+++ b/DesktopApp/TNM/Pages/CreateTask.xaml
@@ -19,6 +19,14 @@
             <!-- Кнопка редактирования -->
         </Grid.RowDefinitions>
         <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
+        <Button
+        Content="↩"
+        Height="40"
+        Click="BackButton_Click"
+        VerticalAlignment="Top"
+        Width="50"
+        HorizontalAlignment="Right"
+        Margin="0,0,5,0" />
         <!-- Название задачи и статус -->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,20">
             <ui:TextBlock
