--- a/DesktopApp/TNM/Pages/ProjectPage.xaml
+++ b/DesktopApp/TNM/Pages/ProjectPage.xaml
@@ -8,48 +8,77 @@
     d:DesignHeight="450" d:DesignWidth="800"
     Title="ProjectPage">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:SnackbarPresenter
+        x:Name="SnackbarPresenter"
+        VerticalAlignment="Top"
+        HorizontalAlignment="Center"
+        Panel.ZIndex="1"
+        Margin="0,10,0,0"
+        Grid.Row="0" />
+        <!-- Информация о проекте -->
+        <Border
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            BorderThickness="1"
+            BorderBrush="Gray"
+            Padding="10"
+            Margin="10,10,0,0"
+            Background="{DynamicResource BackgroundImageBrush}"
+            Width="550"
+            Height="60"
+            Grid.Row="0">
+            <StackPanel>
+                <ui:TextBlock
+                    FontTypography="BodyStrong"
+                    FontSize="18"
+                    FontWeight="Bold"
+                    Text="{Binding SelectedProject.Projectname}"
+                    Foreground="{DynamicResource TextPrimaryBrush}" />
+                <ui:TextBlock
+                    Appearance="Secondary"
+                    Text="{Binding SelectedProject.Description}"
+                    TextWrapping="Wrap"
+                    Foreground="{DynamicResource TextPrimaryBrush}" />
+            </StackPanel>
+        </Border>
+        <Button
+            x:Name="EditProjectButton"
+            Content="Редактировать проект"
+            Grid.Row="0"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Height="61"
+            FontSize="16"
+            Margin="0,10,65,0"
+            Click="EditProjectButton_Click" />
+        <Button
+            Content="↩"
+            Height="61"
+            Grid.Row="0"
+            Click="BackButton_Click"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Right"
+            Width="50"
+            Panel.ZIndex="2"
+            Margin="0,10,10,0" />
         <ui:DynamicScrollViewer
         VerticalScrollBarVisibility="Auto"
-        HorizontalScrollBarVisibility="Disabled">
-            <StackPanel Orientation="Vertical" Margin="10">
-                <ui:SnackbarPresenter
-                x:Name="SnackbarPresenter"
-                VerticalAlignment="Top"
-                HorizontalAlignment="Center"
-                Panel.ZIndex="1"
-                Margin="0,10,0,0" />
-                <!-- Информация о проекте -->
-                <Border
-                BorderThickness="1"
-                BorderBrush="Gray"
-                Padding="10"
-                Margin="10,0,10,0"
-                Background="{DynamicResource BackgroundImageBrush}">
-                    <StackPanel>
-                        <ui:TextBlock
-                        FontTypography="BodyStrong"
-                        FontSize="18"
-                        FontWeight="Bold"
-                        Text="{Binding SelectedProject.Projectname}"
-                        Foreground="{DynamicResource TextPrimaryBrush}" />
-                        <ui:TextBlock
-                        Appearance="Secondary"
-                        Text="{Binding SelectedProject.Description}"
-                        TextWrapping="Wrap"
-                        Foreground="{DynamicResource TextPrimaryBrush}" />
-                    </StackPanel>
-                </Border>
-
+        HorizontalScrollBarVisibility="Disabled"
+        Margin="0,70,0,0">
+            <StackPanel Orientation="Vertical">
                 <!-- Кнопка создания новой задачи -->
                 <ui:Button Content="Создать новую задачу"
-                           x:Name="CreateTaskButton"
-                           Margin="8"
-                           Height="50"
-                           FontSize="16"
-                           HorizontalAlignment="Stretch"
-                           VerticalAlignment="Bottom"
-                           Click="CreateNewTask_Click" />
-
+                x:Name="CreateTaskButton"
+                Margin="8"
+                Height="50"
+                FontSize="16"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Bottom"
+                Click="CreateNewTask_Click" />
                 <!-- Список задач -->
                 <ItemsControl Name="TaskList" ItemsSource="{Binding _Tasks}">
                     <ItemsControl.ItemsPanel>
