--- a/DesktopApp/TNM/Pages/TaskView.xaml
+++ b/DesktopApp/TNM/Pages/TaskView.xaml
@@ -19,6 +19,14 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
+        <Button
+        Content="↩"
+        Height="40"
+        Click="BackButton_Click"
+        VerticalAlignment="Top"
+        Width="50"
+        HorizontalAlignment="Right"
+        Margin="0,0,5,0" />
         <!-- Название задачи и статус -->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,20">
             <ui:TextBlock
@@ -44,9 +52,9 @@
         Content="Редактировать задачу"
         Grid.Row="0"
         HorizontalAlignment="Right"
-        VerticalAlignment="Center"
+        VerticalAlignment="Top"
         Height="40"
-        Margin="0,-20,10,0"
+        Margin="0,0,55,0"
         FontSize="16"
         Click="EditTaskButton_Click" />
         <!-- Описание задачи -->
