--- a/DesktopApp/TNM/Pages/TaskView.xaml
+++ b/DesktopApp/TNM/Pages/TaskView.xaml
@@ -15,6 +15,8 @@
             <RowDefinition Height="Auto" />
             <!-- Описание задачи -->
             <RowDefinition Height="Auto" />
+            <!-- Комментарий -->
+            <RowDefinition Height="Auto" />
             <!-- Категории -->
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
@@ -76,6 +78,23 @@
             Margin="0,0,0,10"
             Foreground="{DynamicResource TextPrimaryBrush}" />
             <WrapPanel x:Name="TagsWrapPanel" />
+        </StackPanel>
+        <!-- Категории (теги) -->
+        <StackPanel Grid.Row="3" Orientation="Vertical" Margin="0,0,0,20">
+            <ui:TextBlock
+            Text="Комментарий:"
+            FontSize="18"
+            FontWeight="Bold"
+            Margin="0,0,0,10"
+            Foreground="{DynamicResource TextPrimaryBrush}" />
+            <ui:TextBox
+            x:Name="CommentTextBox"
+            FontSize="14"
+            Margin="0,10,0,0"
+            AcceptsReturn="True"
+            VerticalScrollBarVisibility="Auto"
+            TextWrapping="Wrap"
+            Height="100" />
         </StackPanel>
 
         <!-- Кнопка редактировать -->
