--- a/DesktopApp/TNM/Pages/TaskView.xaml
+++ b/DesktopApp/TNM/Pages/TaskView.xaml
@@ -32,6 +32,7 @@
         <!-- Название задачи и статус -->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,20">
             <ui:TextBlock
+            x:Name="TaskNameTextBlock"
             Text="Название задачи"
             FontSize="22"
             FontWeight="Bold"
