--- a/DesktopApp/TNM/Pages/EditProject.xaml
+++ b/DesktopApp/TNM/Pages/EditProject.xaml
@@ -9,7 +9,7 @@
     d:DesignHeight="450" d:DesignWidth="800"
     Title="EditProject">
     <Grid>
-        <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
+        <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Grid.Row="5" Margin="0,10,0,0" />
         <!-- Верхний заголовок -->
         <ui:TextBlock
             x:Name="Title"
