--- a/DesktopApp/TNM/Pages/TaskEdit.xaml
+++ b/DesktopApp/TNM/Pages/TaskEdit.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="Auto" />
             <!-- Кнопка редактирования -->
         </Grid.RowDefinitions>
-        <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
+        <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Grid.Row="5" Margin="0,10,0,0" />
         <Button
         Content="↩"
         Height="40"
