--- a/DesktopApp/TNM/Pages/TaskView.xaml
+++ b/DesktopApp/TNM/Pages/TaskView.xaml
@@ -10,17 +10,17 @@
     Title="TaskView">
     <Grid Margin="20">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <!-- Название задачи и статус -->
-            <RowDefinition Height="Auto" />
-            <!-- Описание задачи -->
-            <RowDefinition Height="Auto" />
-            <!-- Комментарий -->
-            <RowDefinition Height="Auto" />
-            <!-- Категории -->
             <RowDefinition Height="*" />
+            <!-- Название задачи и статус -->
+            <RowDefinition Height="*" />
+            <!-- Описание задачи -->
+            <RowDefinition Height="*" />
+            <!-- Комментарий -->
+            <RowDefinition Height="3*" />
+            <!-- Категории -->
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Margin="0,10,0,0" />
+        <ui:SnackbarPresenter x:Name="SnackbarPresenter" VerticalAlignment="Top" HorizontalAlignment="Center" Panel.ZIndex="1" Grid.Row="5" Margin="0,0,10,0" />
         <Button
         Content="↩"
         Height="40"
@@ -57,7 +57,7 @@
         HorizontalAlignment="Right"
         VerticalAlignment="Top"
         Height="40"
-        Margin="0,0,55,0"
+        Margin="0,0,60,0"
         FontSize="16"
         Click="EditTaskButton_Click" />
         <!-- Описание задачи -->
