--- a/DesktopApp/TNM/Pages/TaskEdit.xaml
+++ b/DesktopApp/TNM/Pages/TaskEdit.xaml
@@ -31,7 +31,8 @@
         Margin="0,0,5,0" />
         <!-- Название задачи и статус -->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,20">
-            <ui:TextBlock
+            <ui:TextBox
+            x:Name="TaskTitleTextBox"
             Text="Название задачи"
             FontSize="22"
             FontWeight="Bold"
@@ -44,14 +45,11 @@
             Margin="20,0,0,0"
             Width="150"
             FontSize="16">
-                <ComboBoxItem Content="В процессе" />
-                <ComboBoxItem Content="Выполнено" />
-                <ComboBoxItem Content="Отменено" />
             </ComboBox>
         </StackPanel>
 
         <!-- Описание задачи -->
-        <ui:TextBlock
+        <ui:TextBox
         x:Name="TaskDescriptionTextBlock"
         Grid.Row="1"
         Text="Описание задачи: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent euismod sapien a magna gravida, ac aliquet lectus venenatis."
@@ -63,6 +61,7 @@
         <!-- Категории (теги) -->
         <StackPanel Grid.Row="2" Orientation="Vertical" Margin="0,0,0,20">
             <ui:TextBlock
+            x:Name="CurrentTagsTextBlock"
             Text="Теги:"
             FontSize="18"
             FontWeight="Bold"
